--- a/style.css
+++ b/style.css
@@ -20,10 +20,9 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 7rem;
-    padding-right: 2rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     background: white;
-    top: 50px;
     height: 50px;
     z-index: 1000;
 }
@@ -33,6 +32,15 @@ body {
     max-width: 90rem;
     margin: auto;
     width: 80rem;
+    min-width: 10rem;
+}
+
+
+.set-container-right {
+    justify-content: flex-end;
+}
+
+.flex-settings {
     flex-direction: row;
     flex-wrap: wrap;
 }
@@ -40,9 +48,10 @@ body {
 .searchbar {
     color: black;
     background: lightgrey;
-    width: 1200px;
+    width: 800px;
+    max-width: 1200px;
+    min-width: 300px;
     height: 40px;
-    position: fixed;
     margin: 0 0 0 1rem;
 }
 
